--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,11 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #e1e1e1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
